--- a/LimenawebApp/Web.config
+++ b/LimenawebApp/Web.config
@@ -15,7 +15,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--<add key="API_ja" value="http://50.194.9.195:65215" />-->
     <!-- <add key="API_ja" value="http://api.limenainc.net:65214/" />-->
-    <add key="API_ja" value="http://api.limenainc.net:65214/" />
+    <add key="API_ja" value="http://50.194.9.195:65215/" />
+
+    <!-- <add key="API_sec" value="http://50.194.9.195:65216" />-->
+   <add key="API_sec" value="http://50.194.9.195:65216" />
+    
   <add key="recaptchaPublicKey" value="6LecV6UUAAAAAEpcY2Njni3luNhE0-FTcyPfG87q" /><add key="recaptchaPrivateKey" value="6LecV6UUAAAAAMo9YqpK15xQGsYkVWsDNMkPky-j" /><add key="recaptchaApiVersion" value="2" />
   </appSettings>
   <system.web>
