--- a/LimenawebApp/Web.config
+++ b/LimenawebApp/Web.config
@@ -15,12 +15,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--<add key="API_ja" value="http://50.194.9.195:65215" />-->
     <!-- <add key="API_ja" value="http://api.limenainc.net:65214/" />-->
-    <add key="API_ja" value="http://50.194.9.195:65215/" />
+    <add key="API_ja" value="http://192.168.1.14:9096" />
 
-    <!-- <add key="API_sec" value="http://50.194.9.195:65216" />-->
-   <add key="API_sec" value="http://50.194.9.195:65216" />
-    
-  <add key="recaptchaPublicKey" value="6LecV6UUAAAAAEpcY2Njni3luNhE0-FTcyPfG87q" /><add key="recaptchaPrivateKey" value="6LecV6UUAAAAAMo9YqpK15xQGsYkVWsDNMkPky-j" /><add key="recaptchaApiVersion" value="2" />
+    <!-- <add key="API_sec" value="http://50.194.9.195:65214/api" />-->
+    <!-- <add key="API_sec" value="http://192.168.1.14:9099" />-->
+   <add key="API_sec" value="http://192.168.1.14:9095" /> 
+   <add key="API_budget" value="http://192.168.1.14:9097" /> 
+
+    <add key="recaptchaPublicKey" value="6LecV6UUAAAAAEpcY2Njni3luNhE0-FTcyPfG87q" /><add key="recaptchaPrivateKey" value="6LecV6UUAAAAAMo9YqpK15xQGsYkVWsDNMkPky-j" /><add key="recaptchaApiVersion" value="2" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -72,11 +74,18 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
+   <!-- <add name="dbLimenaEntities" connectionString="metadata=res://*/Models.dbLimena.csdl|res://*/Models.dbLimena.ssdl|res://*/Models.dbLimena.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=dbLimena;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+ <add name="dbComerciaEntities" connectionString="metadata=res://*/Models.dbComercia.csdl|res://*/Models.dbComercia.ssdl|res://*/Models.dbComercia.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=dbComercia;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DLI_PROEntities" connectionString="metadata=res://*/Models.DLI_PRO.csdl|res://*/Models.DLI_PRO.ssdl|res://*/Models.DLI_PRO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=PEPPERI_TEST;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MatrizComprasEntities" connectionString="metadata=res://*/Models.dbMatrizCompras.csdl|res://*/Models.dbMatrizCompras.ssdl|res://*/Models.dbMatrizCompras.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=MatrizCompras_Test;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Interna_DLIEntities" connectionString="metadata=res://*/Models.Interna_DLI.csdl|res://*/Models.Interna_DLI.ssdl|res://*/Models.Interna_DLI.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=Interna_DLI;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
+-->
     <add name="dbLimenaEntities" connectionString="metadata=res://*/Models.dbLimena.csdl|res://*/Models.dbLimena.ssdl|res://*/Models.dbLimena.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=limena.database.windows.net;initial catalog=dbLimena;user id=dgarcia;password=Dago1984*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="dbComerciaEntities" connectionString="metadata=res://*/Models.dbComercia.csdl|res://*/Models.dbComercia.ssdl|res://*/Models.dbComercia.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=limena.database.windows.net;initial catalog=dbComercia;user id=dgarcia;password=Dago1984*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DLI_PROEntities" connectionString="metadata=res://*/Models.DLI_PRO.csdl|res://*/Models.DLI_PRO.ssdl|res://*/Models.DLI_PRO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DLI_PRO;user id=sa;password=sa123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MatrizComprasEntities" connectionString="metadata=res://*/Models.dbMatrizCompras.csdl|res://*/Models.dbMatrizCompras.ssdl|res://*/Models.dbMatrizCompras.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MatrizCompras;user id=sa;password=sa123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="Interna_DLIEntities" connectionString="metadata=res://*/Models.Interna_DLI.csdl|res://*/Models.Interna_DLI.ssdl|res://*/Models.Interna_DLI.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Interna_DLI;user id=sa;password=sa123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="dbComerciaEntities" connectionString="metadata=res://*/Models.dbComercia.csdl|res://*/Models.dbComercia.ssdl|res://*/Models.dbComercia.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=dbComercia;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DLI_PROEntities" connectionString="metadata=res://*/Models.DLI_PRO.csdl|res://*/Models.DLI_PRO.ssdl|res://*/Models.DLI_PRO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=DLI_PRO;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MatrizComprasEntities" connectionString="metadata=res://*/Models.dbMatrizCompras.csdl|res://*/Models.dbMatrizCompras.ssdl|res://*/Models.dbMatrizCompras.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=MatrizCompras_Test;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Interna_DLIEntities" connectionString="metadata=res://*/Models.Interna_DLI.csdl|res://*/Models.Interna_DLI.ssdl|res://*/Models.Interna_DLI.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.14;initial catalog=Interna_DLI;user id=sa;password=DiLimen@2018;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.net>
     <mailSettings>
